# gl_interaction

./: readme.txt
gl_interaction/: 2  CMakeLists.txt  gl_operation.cpp  gl_operation.h  makeit.sh
gl_interaction/data/: data_rand.txt  model_rand.txt
gl_interaction/include/: ICPAlgorithm.h  KrigingAlgorithm.h  PointCloud.h  TransformPoints.h  genTexture.h  gl_basic.h  gl_common.h  loadFaceModel.h
gl_interaction/src/: ICPAlgorithm.cpp  KrigingAlgorithm.cpp  Makefile  PointCloud.cpp  TransformPoints.cpp  genTexture.cpp  gl_common.cpp  glm.cpp  loadFaceModel.cpp  main.cpp
windows/: gl_interaction.sln
windows/gl_interaction/: ICPAlgorithm.cpp  ICPAlgorithm.h  KrigingAlgorithm.cpp  KrigingAlgorithm.h  PointCloud.cpp  PointCloud.h  TransformPoints.cpp  TransformPoints.h  genTexture.cpp  genTexture.h  gl_basic.cpp  gl_basic.h  gl_common.cpp  gl_common.h  gl_interaction.vcxproj  gl_interaction.vcxproj.filters  glm.cpp  glm.h  loadFaceModel.cpp  loadFaceModel.h  main.cpp
windows/gl_interaction/x64/Debug/: vc120.idb
windows/gl_interaction/x64/Debug/gl_interaction.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  gl_interaction.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
