CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(gl_interaction)
INCLUDE_DIRECTORIES("/usr/include")
INCLUDE_DIRECTORIES("include")
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
#ADD_DEFINITIONS("-Wall -g")
AUX_SOURCE_DIRECTORY(src SOURCES)
#ADD_LIBRARY(gl_interaction ${SOURCES})# static library
#ADD_LIBRARY(gl_interaction SHARED ${SOURCES})# share library
ADD_EXECUTABLE(gl_interaction ${SOURCES})
TARGET_LINK_LIBRARIES (gl_interaction ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${OpenCV_LIBS})
